# University_Postgres_SQLAlchemy

./: pyproject.toml
University_Postgres_SQLAlchemy/: alembic.ini
University_Postgres_SQLAlchemy/database/: db_connection.py  models.py  seed.py
University_Postgres_SQLAlchemy/migrations/: env.py
University_Postgres_SQLAlchemy/migrations/versions/: 33b1f57b3393_init2.py  5a9f42acdcf9_init_migration.py  7c83d96ca43d_init_migration.py
