[tool.poetry]
name = "university-postgres-sqlalchemy"
version = "0.1.0"
description = ""
authors = ["Artur Mistiuk <mistiuk.artur@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "university_postgres_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.12"
psycopg2 = "^2.9.6"
alembic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
